...
            android:background="?attr/colorSurfaceVariant"
            android:contentDescription="@null"
            android:visibility="gone"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginBottom="8dp" />

...
            android:layout_height="wrap_content"
            style="@style/Widget.Auros.Eyebrow"
            android:text="Instructions"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tv_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurface"
            android:lineSpacingMultiplier="1.4" />

...
